--- a/index.html
+++ b/index.html
@@ -285,12 +285,12 @@
       <h2>Our Products</h2>
       <div class="products">
         <div class="product">
-          <img src="iamges/blueroyal.jpg&fit=crop&w=600&q=80" alt="Krishna Poshak Blue Royal">
+          <img src="iamges/blueroyal.jpg alt="Krishna Poshak Blue Royal">
           <h3>Krishna Poshak – Blue Royal</h3>
           <a class="cta-btn" href="https://wa.me/919259005699?text=I%20want%20Krishna%20Poshak%20Blue%20Royal">Order Now</a>
         </div>
         <div class="product">
-          <img src="pink.webp&fit=crop&w=600&q=80" alt="Krishna Poshak Pink Blossom">
+          <img src="pink.webp alt="Krishna Poshak Pink Blossom">
           <h3>Krishna Poshak – Pink Blossom</h3>
           <a class="cta-btn" href="https://wa.me/919259005699?text=I%20want%20Krishna%20Poshak%20Pink%20Blossom">Order Now</a>
         </div>
