--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       <h2>Our Products</h2>
       <div class="products" role="list">
         <div class="product" role="listitem">
-          <img src="images/blueroyal.jpg" alt="Krishna Poshak Blue Royal">
+          <img src="images/blue.jpg" alt="Krishna Poshak Blue Royal">
           <h3>Krishna Poshak – Blue Royal</h3>
           <a class="cta-btn" href="https://wa.me/919259005699?text=I%20want%20Krishna%20Poshak%20Blue%20Royal">Order Now</a>
         </div>
